kubernetes/apps/game/pterodactyl-panel/app/headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: panel-headers
spec:
  headers:
    accessControlAllowOriginList:
      - "https://01.gameservers.f9.casa"
      - "https://02.gameservers.f9.casa"
      - "https://03.gameservers.f9.casa"
