kubernetes/apps/game/pterodactyl-panel/app/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: gameserverheaders
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
    accessControlAllowHeaders: ["*"]
    accessControlAllowOriginList:
      - 'https://f9.casa'
      - 'https://gameservers.f9.casa'
