kubernetes/apps/game/pterodactyl-panel/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: panel
    app.kubernetes.io/instance: panel
    app.kubernetes.io/name: panel
  name: panel
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: panel
  template:
    metadata:
      labels:
        app: panel
        app.kubernetes.io/name: panel
    spec:
      containers:
      - image: ghcr.io/pterodactyl/panel:v1.11.11
        name: panel
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
      hostAliases:
      - ip: "10.0.10.250"
        hostnames:
        - "01.gameservers.f9.casa"
        - "02.gameservers.f9.casa"
        - "03.gameservers.f9.casa"
