kubernetes/apps/game/pterodactyl-panel/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: panel
  name: panel
  namespace: pterodactyl
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: panel
