kubernetes/apps/game/pterodactyl-panel/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: panel
spec:
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  hostnames: ["gameservers.f9.casa"]
  rules:
    - backendRefs:
        - name: panel
          port: 80
