kubernetes/apps/game/pterodactyl-panel/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: panel
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gameservers.f9.casa`)
      kind: Rule
      services:
        - name: panel
          port: 80
      middlewares:
        - name: panel-headers
          namespace: game
